--- a/spring-boot-starter/src/main/resources/application.properties
+++ b/spring-boot-starter/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-con.hewking.title = "spring-boot-study"
+com.hewking.title = "spring-boot-study"
 com.hewking.desc = "this is a dmeo"
 
 #logging.path=/user/local/log
@@ -7,10 +7,10 @@ logging.level.org.springframework.web=INFO
 logging.level.org.hibernate=ERROR
 
 # config jpa connect from mysql
-#spring.datasource.url=jdbc:mysql://localhost:3306/test
-#spring.datasource.username=root
-#spring.datasource.password=root
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://118.25.85.137:3306/test
+spring.datasource.username=root
+spring.datasource.password=aaaaaaa1
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
